n1-ms-habit/k8s/ms-habit.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ms-habit
spec:
  replicas: 5
  selector:
    matchLabels:
      app: ms-habit
  template:
    metadata:
      labels:
        app: ms-habit
    spec:
      containers:
        - name: ms-habit
          image: eduardo1112/ms-habit:1.0.0
          ports:
            - containerPort: 8081
          readinessProbe:
            httpGet:
              path: /habits
              port: 8081
            initialDelaySeconds: 10
            periodSeconds: 5
            failureThreshold: 30
---
apiVersion: v1
kind: Service
metadata:
  name: ms-habit
spec:
  selector:
    app: ms-habit
  ports:
    - port: 8081
      targetPort: 8081
