n1-ms-habit/k8s/ingress.yaml
# Ingress do ms-habit: raiz -> Service ms-habit:8081
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mytracker-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ms-habit
                port:
                  number: 8081
